Enhance ReactVirtualized component by adding overscan calculation for improved performance and updating CSS for better layout control. Adjusted styles to ensure proper width and overflow handling in the grid container.

--- a/src/pages/ReactVirtualized.css
+++ b/src/pages/ReactVirtualized.css
@@ -28,7 +28,7 @@
 
 .section-wrapper {
   position: absolute;
-  overflow: hidden;
+  width: 100%;
 }
 
 .list-item {
@@ -55,3 +55,12 @@
   outline: none;
   will-change: transform;
 } 
+
+
+.ReactVirtualized__Grid__innerScrollContainer{
+  width: 100%!important;
+  overflow: unset!important;
+  position: static!important;
+  max-width: unset!important;
+  max-height: unset!important;
+}
